// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartItem component should render with given state from Redux store 1`] = `
<div
  className=" w-4/5  md:w-full p-1 px-2 border-y-2 border-gray-400 flex gap-3 items-center rounded-md relative "
  id="undefined"
>
  <img
    className="w-20 h-20 max-w-[60px] rounded-full object-contain"
  />
  <div
    className=" flex flex-col"
  >
    <p
      className="text-lg text-gray-900 width-[2rem]"
    />
    <p
      className="text-lg text-gray-900 font-bold"
    >
      NaN
      $
    </p>
  </div>
  <div
    className="absolute right-1 bottom-2"
  >
    <div
      className="group flex items-center gap-2 ml-auto cursor-pointer bg-gray-200 px-2 rounded-xl relative"
    >
      <svg
        className="text-gray-400 "
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M872 474H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h720c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
        />
      </svg>
      <p
        className=" py-[1px] px-2 border-[1px] text-[0.8rem] "
      >
        QTY: 
      </p>
      <div
        className=""
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=" "
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          t="1551322312294"
          version="1.1"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M474 152m8 0l60 0q8 0 8 8l0 704q0 8-8 8l-60 0q-8 0-8-8l0-704q0-8 8-8Z"
          />
          <path
            d="M168 474m8 0l672 0q8 0 8 8l0 60q0 8-8 8l-672 0q-8 0-8-8l0-60q0-8 8-8Z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="text-xs flex gap-2 mt-1 absolute right-2 top-[0.2rem]"
  >
    <svg
      className="rotate-45 text-[17px] text-stone-800	hover:text-rose-700"
      fill="currentColor"
      height="1em"
      onClick={[Function]}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      t="1551322312294"
      version="1.1"
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <defs />
      <path
        d="M474 152m8 0l60 0q8 0 8 8l0 704q0 8-8 8l-60 0q-8 0-8-8l0-704q0-8 8-8Z"
      />
      <path
        d="M168 474m8 0l672 0q8 0 8 8l0 60q0 8-8 8l-672 0q-8 0-8-8l0-60q0-8 8-8Z"
      />
    </svg>
    <svg
      className=" text-[17px] text-stone-800	hover:text-rose-700"
      fill="currentColor"
      height="1em"
      onClick={[Function]}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M923 283.6a260.04 260.04 0 0 0-56.9-82.8 264.4 264.4 0 0 0-84-55.5A265.34 265.34 0 0 0 679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 0 0-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
      />
    </svg>
  </div>
</div>
`;

exports[`myComponent renders correctly 1`] = `
<DocumentFragment>
  <div
    class=" w-4/5  md:w-full p-1 px-2 border-y-2 border-gray-400 flex gap-3 items-center rounded-md relative "
    id="undefined"
  >
    <img
      class="w-20 h-20 max-w-[60px] rounded-full object-contain"
    />
    <div
      class=" flex flex-col"
    >
      <p
        class="text-lg text-gray-900 width-[2rem]"
      />
      <p
        class="text-lg text-gray-900 font-bold"
      >
        NaN$
      </p>
    </div>
    <div
      class="absolute right-1 bottom-2"
    >
      <div
        class="group flex items-center gap-2 ml-auto cursor-pointer bg-gray-200 px-2 rounded-xl relative"
      >
        <svg
          class="text-gray-400 "
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M872 474H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h720c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
          />
        </svg>
        <p
          class=" py-[1px] px-2 border-[1px] text-[0.8rem] "
        >
          QTY: 
        </p>
        <div
          class=""
        >
          <svg
            class=" "
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            t="1551322312294"
            version="1.1"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs />
            <path
              d="M474 152m8 0l60 0q8 0 8 8l0 704q0 8-8 8l-60 0q-8 0-8-8l0-704q0-8 8-8Z"
            />
            <path
              d="M168 474m8 0l672 0q8 0 8 8l0 60q0 8-8 8l-672 0q-8 0-8-8l0-60q0-8 8-8Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="text-xs flex gap-2 mt-1 absolute right-2 top-[0.2rem]"
    >
      <svg
        class="rotate-45 text-[17px] text-stone-800	hover:text-rose-700"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        t="1551322312294"
        version="1.1"
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs />
        <path
          d="M474 152m8 0l60 0q8 0 8 8l0 704q0 8-8 8l-60 0q-8 0-8-8l0-704q0-8 8-8Z"
        />
        <path
          d="M168 474m8 0l672 0q8 0 8 8l0 60q0 8-8 8l-672 0q-8 0-8-8l0-60q0-8 8-8Z"
        />
      </svg>
      <svg
        class=" text-[17px] text-stone-800	hover:text-rose-700"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 1024 1024"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M923 283.6a260.04 260.04 0 0 0-56.9-82.8 264.4 264.4 0 0 0-84-55.5A265.34 265.34 0 0 0 679.7 125c-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5a258.44 258.44 0 0 0-56.9 82.8c-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3.1-35.3-7-69.6-20.9-101.9zM512 814.8S156 586.7 156 385.5C156 283.6 240.3 201 344.3 201c73.1 0 136.5 40.8 167.7 100.4C543.2 241.8 606.6 201 679.7 201c104 0 188.3 82.6 188.3 184.5 0 201.2-356 429.3-356 429.3z"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
